# ClearC

./: CMakeLists.txt  ReadMe.md  rebuild.sh  redemo.sh  retest.sh  retest_basic.sh
docs/: Devlog.md  issues.md  report.md
include/: command.h  util.h
src/: ast.cpp  ast.hpp  ast_visual.cpp  build.sh  clean.sh  codegen.cpp  codegen.hpp  command.cpp  generator.cpp  generator.hpp  html.cpp  lexer.cpp  lexer.l  llvm_util.hpp  main.cpp  parser.cpp  parser.hpp  parser.y  util.cpp  util.hpp
src/include/: command.h
test/: .gitignore  do_test.sh
test/basic/: test_arithmetic.cc  test_error_semantic.c  test_error_semantic.c.html  test_error_semantic.cc  test_error_syntax.c  test_error_syntax.cc  test_hanoi.c  test_hanoi.cc  test_lcs.c  test_lcs.cc  test_matrix.c  test_matrix.cc  test_prime.c  test_prime.cc
test/demo/: cdemo.c  demo.c  demo.c.html  demo.cc  demo.cc_AST.html  demo.cc_IR.html  list.cc  quicksort.cc
test/testbin/: README.md
test/testbin/linux/amd64/: test_arithmetic  test_hanoi  test_lcs  test_matrix  test_prime
test/testbin/linux/arm64/: test_arithmetic  test_hanoi  test_lcs  test_matrix  test_prime
test/testbin/linux/riscv/: test_arithmetic  test_hanoi  test_lcs  test_matrix  test_prime
test/testbin/macos/amd64/: test_arithmetic  test_hanoi  test_lcs  test_matrix  test_prime
test/testbin/macos/arm64/: test_arithmetic  test_hanoi  test_lcs  test_matrix  test_prime
